// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders correctly 1`] = `
<div
  aria-level="1"
  class="tabs is-boxed is-large mt-4 mx-6"
  role="heading"
>
  <ul>
    <li
      class=""
    >
      <a
        href="/temperature"
      >
        home.tab.temperature
      </a>
    </li>
    <li
      class=""
    >
      <a
        href="/sensation"
      >
        home.tab.sensation
      </a>
    </li>
    <li
      class=""
    >
      <a
        href="/humidity"
      >
        home.tab.humidity
      </a>
    </li>
  </ul>
</div>
`;

exports[`Home renders humidity tab as active 1`] = `
<div
  aria-level="1"
  class="tabs is-boxed is-large mt-4 mx-6"
  role="heading"
>
  <ul>
    <li
      class=""
    >
      <a
        href="/temperature"
      >
        home.tab.temperature
      </a>
    </li>
    <li
      class=""
    >
      <a
        href="/sensation"
      >
        home.tab.sensation
      </a>
    </li>
    <li
      class="is-active"
    >
      <a
        href="/humidity"
      >
        home.tab.humidity
      </a>
    </li>
  </ul>
</div>
`;

exports[`Home renders loading if data is being fetched 1`] = `
<div
  aria-level="1"
  class="columns"
  role="heading"
>
  <div
    class="control is-large is-loading"
  >
    <input
      class="hidden"
    />
  </div>
</div>
`;

exports[`Home renders loading if fetching data failed 1`] = `
<div
  aria-level="1"
  class="columns"
  role="heading"
>
  <div
    class="control is-large is-loading"
  >
    <input
      class="hidden"
    />
  </div>
</div>
`;

exports[`Home renders sensation tab as active 1`] = `
<div
  aria-level="1"
  class="tabs is-boxed is-large mt-4 mx-6"
  role="heading"
>
  <ul>
    <li
      class=""
    >
      <a
        href="/temperature"
      >
        home.tab.temperature
      </a>
    </li>
    <li
      class="is-active"
    >
      <a
        href="/sensation"
      >
        home.tab.sensation
      </a>
    </li>
    <li
      class=""
    >
      <a
        href="/humidity"
      >
        home.tab.humidity
      </a>
    </li>
  </ul>
</div>
`;

exports[`Home renders temperature tab as active 1`] = `
<div
  aria-level="1"
  class="tabs is-boxed is-large mt-4 mx-6"
  role="heading"
>
  <ul>
    <li
      class="is-active"
    >
      <a
        href="/temperature"
      >
        home.tab.temperature
      </a>
    </li>
    <li
      class=""
    >
      <a
        href="/sensation"
      >
        home.tab.sensation
      </a>
    </li>
    <li
      class=""
    >
      <a
        href="/humidity"
      >
        home.tab.humidity
      </a>
    </li>
  </ul>
</div>
`;
